# visualize_random

./: .gitignore  CMakeLists.txt  README.md
source/: bob_myrtle_rand.c  mersenne.c  mersenne.h  random_functions.h  simple_random_functions.c  uint.h  visualize_PRNG.c  visualize_random_distribution.c
